--- a/Mapas_Mentales/Fundamentos de Ciberseguridad/Fundamentos_de_Ciberseguridad.html
+++ b/Mapas_Mentales/Fundamentos de Ciberseguridad/Fundamentos_de_Ciberseguridad.html
@@ -4,7 +4,7 @@
 <a onclick="collapseAll(document.getElementById('base'))" href="#">Collapse</a></div><div class="basetext" id="base"><ul>
 	<li class="col" id="FMID_1676812763FM"><div class="nodecontent" style="color:#000000;font-size:167%;">Ciberseguridad</div>
 		<ul class="subexp">
-	<li class="basic" id="FMID_1898865173FM"><img src="https://github.com/RobertMuriel/Infosec/blob/main/Mapas_Mentales/Fundamentos%20de%20Ciberseguridad/Fundamentos_de_Ciberseguridad.html_files/icons/idea.png" alt="idea" /> <div class="nodecontent" style="color:#0033ff;background-color:#cccccc;font-size:150%;">Conjunto de tecnicas, sistemas de gestion y otras medidas que pretenden proteger de incidentes la información y los medios que la tratan sea cual sea su medio, papel o electronico o de forma de tratamiento manual o automatizado.</div></li>
+	<li class="basic" id="FMID_1898865173FM"><img src="https://htmlpreview.github.io/?https://github.com/RobertMuriel/Infosec/main/Fundamentos_de_Ciberseguridad.html_files/icons/idea.png" alt="idea" /> <div class="nodecontent" style="color:#0033ff;background-color:#cccccc;font-size:150%;">Conjunto de tecnicas, sistemas de gestion y otras medidas que pretenden proteger de incidentes la información y los medios que la tratan sea cual sea su medio, papel o electronico o de forma de tratamiento manual o automatizado.</div></li>
 	<li class="col" id="FMID_1411794028FM"><img src="Fundamentos_de_Ciberseguridad.html_files/icons/full-1.png" alt="full-1" /> <div class="nodecontent" style="color:#0033ff;font-size:150%;">Propiedades de la Información</div>
 		<ul class="subexp">
 	<li class="col" id="FMID_442719789FM"><div class="nodecontent" style="color:#00b439;font-size:133%;">Confidencialidad</div>
