Actualización Notas Pentesting

--- a/Mapas_Mentales/Ciberamenazas/Ciberamenazas.mm.html
+++ b/Mapas_Mentales/Ciberamenazas/Ciberamenazas.mm.html
@@ -78,6 +78,73 @@
 </ul>
 </li>
 
+</ul><p><span style="color: #0033ff;font-size: 150%;font-family: SansSerif, sans-serif; ">Tipos de Ciberamenazas - Clasificadas por su Objetivo</span>
+<ul><li><span style="color: #00b439;font-size: 133%;font-family: SansSerif, sans-serif; ">Ciberespionaje</span>
+<ul><li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Motivos: Obtencion de IP's, secretos y datos personales</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Objetivos: Gobiernos,empresasy &nbsp;particulares </span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Agentes: Estados nacionales y empresas</span>
+
+</li>
+
+</ul>
+</li>
+<li><span style="color: #00b439;font-size: 133%;font-family: SansSerif, sans-serif; ">Ciberdelito</span>
+<ul><li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Motivos: Ganancia Econpmica</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Objetivos: Gobiernos,empresas y particulares </span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Agentes; Delincuencia Organizada y Grupos de Alquiler</span>
+
+</li>
+
+</ul>
+</li>
+<li><span style="color: #00b439;font-size: 133%;font-family: SansSerif, sans-serif; ">Ciberactivismo</span>
+<ul><li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Motivos: Cambio Politivp o Notoriedad</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Onjetivos: Gobiernos y empresas</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Agentes; Grupos activistas</span>
+
+</li>
+
+</ul>
+</li>
+<li><span style="color: #00b439;font-size: 133%;font-family: SansSerif, sans-serif; ">Ciberterrorismo</span>
+<ul><li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Motivos: Cambio politico o notoriedad</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Objetivo; Gobiernos, empresas y particulares</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Agentes: Agrupaciones terroristas</span>
+
+</li>
+
+</ul>
+</li>
+<li><span style="color: #00b439;font-size: 133%;font-family: SansSerif, sans-serif; ">Ciberguerra</span>
+<ul><li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Motivo: Dominacion militar o politica</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Objetivo: Bienes politicos y militares</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Agentes: Operacoones militares</span>
+
+</li>
+
+</ul>
+</li>
+
 </ul></li>
 </ul></body>
 </html>
