Actualización Mapa Mental Ciberamenazas

--- a/Mapas_Mentales/Ciberamenazas/Ciberamenazas.mm.html
+++ b/Mapas_Mentales/Ciberamenazas/Ciberamenazas.mm.html
@@ -19,7 +19,54 @@
 <body>
 <p><span style="color: #000000;font-size: 166%;font-family: SansSerif, sans-serif; ">Ciberamenazas</span>
 <ul><li><p><span style="color: #0033ff;font-size: 150%;font-family: SansSerif, sans-serif; ">Actividades maliciosas que pueden da&#241;ar o interrumpir un sistema informattico, una red o la informaci&#243;n que contiene</span>
-<p><span style="color: #0033ff;font-size: 150%;font-family: SansSerif, sans-serif; ">Tipos de Ciberamenazas - Clasificadas por su estructura</span>
+<p><span style="color: #0033ff;font-size: 150%;font-family: SansSerif, sans-serif; ">Tipos de Ciberamenazas - Clasificadas por la eleccion de victimas</span>
+<ul><li><span style="color: #00b439;font-size: 133%;font-family: SansSerif, sans-serif; ">Ataques Oportunistas</span>
+<ul><li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">No son personales</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Solo se enfocan en el retorno de la inversion ROI</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Ataques a grande escala</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Altamente automatizados</span>
+<ul><li><span style="color: #111111;">Utilizan servidores malicioses para enviar SPAMy distribuir malware indiscriminadamente </span>
+
+</li>
+<li><span style="color: #111111;">Utilizan grandes notnes para gestionar victimas </span>
+
+</li>
+
+</ul>
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Generalmente son no persistentes</span>
+
+</li>
+
+</ul>
+</li>
+<li><span style="color: #00b439;font-size: 133%;font-family: SansSerif, sans-serif; ">Ataques dirigidos</span>
+<ul><li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Son muy personales</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Son persistentess</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Son sigilosos</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Se centra en el control de la victima</span>
+
+</li>
+<li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Automatizados pero a menor escala</span>
+
+</li>
+
+</ul>
+</li>
+
+</ul><p><span style="color: #0033ff;font-size: 150%;font-family: SansSerif, sans-serif; ">Tipos de Ciberamenazas - Clasificadas por su estructura</span>
 <ul><li><span style="color: #00b439;font-size: 133%;font-family: SansSerif, sans-serif; ">La estructura esta relacionada con los recursos, la organizaci&#243;n y la financiaci&#243;n del atacante</span>
 
 </li>
@@ -139,6 +186,22 @@
 
 </li>
 <li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">Agentes: Operacoones militares</span>
+
+</li>
+
+</ul>
+</li>
+
+</ul><p><span style="color: #0033ff;font-size: 150%;font-family: SansSerif, sans-serif; ">Tipos de Ciberamenazas - Clasificadass por su Origen</span>
+<ul><li><span style="color: #00b439;font-size: 133%;font-family: SansSerif, sans-serif; ">Amenaza Externa</span>
+<ul><li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">El atacante no tiene acceso a los sistemas y redes de la victima</span>
+
+</li>
+
+</ul>
+</li>
+<li><span style="color: #00b439;font-size: 133%;font-family: SansSerif, sans-serif; ">Amenaza Interna</span>
+<ul><li><span style="color: #990000;font-size: 116%;font-family: SansSerif, sans-serif; ">El atacante ha autorizado el acceso a apgunas partes de los siatemas y redes de la victima</span>
 
 </li>
 
